kubernetes/apps/default/misc-ingress/app/ingress-internal-calibre_web.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web
spec:
  ingressClassName: internal
  rules:
    - host: &host "calibre-web.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre-web
                port:
                  number: 8073
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: calibre-web
subsets:
  - addresses:
      - ip: "${SECRET_UNRAID_IP}"
    ports:
      - name: http
        port: 8073
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
spec:
  ports:
    - name: http
      port: 8073
  type: ClusterIP
